added row adding

--- a/index.html
+++ b/index.html
@@ -16,29 +16,9 @@
     </head>
     
     <body>
-        <div class="gd-container">
+        <div class="gd-container" ng-controller="ProjectCtrl">
             <div class="gd-editor">
-                <div class="gd-editor--toolbar">
-                    <div class="topcoat-button-bar">
-                        <div class="topcoat-button-bar__item">
-                            <input type="radio" name="grid-size" id="grid-size-s" value="s" checked>
-                            <label for="grid-size-s" class="topcoat-button-bar__button">Small</label>                            
-                        </div>
-                        <div class="topcoat-button-bar__item">
-                            <input type="radio" name="grid-size" id="grid-size-m" value="m" >
-                            <label for="grid-size-m" class="topcoat-button-bar__button">Medium</label>                            
-                        </div>
-                        <div class="topcoat-button-bar__item">
-                            <input type="radio" name="grid-size" id="grid-size-l" value="l" >
-                            <label for="grid-size-l" class="topcoat-button-bar__button">Large</label>                            
-                        </div>
-                        <div class="topcoat-button-bar__item">
-                            <input type="radio" name="grid-size" id="grid-size-xl" value="xl" >
-                            <label for="grid-size-xl" class="topcoat-button-bar__button">X-Large</label>                            
-                        </div>
-                    </div>
-                    <button class="topcoat-button--cta">Add row</button>
-                </div>
+                <toolbar></toolbar>
                 <grid-canvas></grid-canvas>
             </div>
             <!-- <div class="gd-vr"></div>-->
@@ -48,8 +28,11 @@
         </div>
         <script src="scripts/vendor/angular.js"></script>
         <script src="scripts/app.js"></script>
+        <script src="scripts/directives/toolbar.js"></script>
         <script src="scripts/directives/canvas.js"></script>
+        <script src="scripts/directives/row.js"></script>
         <script src="scripts/directives/gridbox.js"></script>
+        <script src="scripts/controllers/projectctrl.js"></script>
     </body>
 
 </html>
