--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="styles/topcoat-desktop-dark.css">
         <link rel="stylesheet" href="styles/gs-grid.css">
         <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href="styles/fonts.css">
         <!--[if lt IE 9]>
             <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
@@ -31,7 +32,7 @@
         <script src="scripts/directives/toolbar.js"></script>
         <script src="scripts/directives/canvas.js"></script>
         <script src="scripts/directives/row.js"></script>
-        <script src="scripts/directives/gridbox.js"></script>
+        <script src="scripts/directives/column.js"></script>
         <script src="scripts/controllers/projectctrl.js"></script>
     </body>
 
