--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <script src="scripts/directives/row.js"></script>
         <script src="scripts/directives/column.js"></script>
         <script src="scripts/controllers/projectctrl.js"></script>
+        <script src="scripts/services/bphelpers.js"></script>
     </body>
 
 </html>
