--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="styles/topcoat-desktop-dark.css">
         <link rel="stylesheet" href="styles/gs-grid.css">
         <link rel="stylesheet" href="styles/style.css">
-        <link rel="stylesheet" href="styles/fonts.css">
+        <link rel="stylesheet" href="fonts/icons/style.css">
         <!--[if lt IE 9]>
             <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
@@ -21,6 +21,7 @@
             <div class="gd-editor">
                 <toolbar></toolbar>
                 <grid-canvas></grid-canvas>
+                <src-panel></src-panel>
             </div>
             <!-- <div class="gd-vr"></div>-->
             <div class="gd-properties">
@@ -33,8 +34,12 @@
         <script src="scripts/directives/canvas.js"></script>
         <script src="scripts/directives/row.js"></script>
         <script src="scripts/directives/column.js"></script>
+        <script src="scripts/directives/srcpanel.js"></script>
         <script src="scripts/controllers/projectctrl.js"></script>
         <script src="scripts/models/column.js"></script>
+        
+        <script src="scripts/vendor/ZeroClipboard.min.js"></script>        
+        <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?skin=sunburst&autoload=false"></script>
     </body>
 
 </html>
